--- a/tnayin48/das48.html
+++ b/tnayin48/das48.html
@@ -9,7 +9,7 @@
 </head>
 <body>
 
-    <div class="div">
+    <!-- <div class="div">
         <div class="flex">
         <div class="which"><h1>SEE WHICH EVENT WORKS</h1></div>
         <div class="mouseover"><h2></h2></div>
@@ -18,6 +18,26 @@
         <input type="text" value="Select some of the text!!!" >
         <div class="mouse"><h3>Click the text to see Mousedown and Mouseup Events</h3></div>
     </div>
+    </div>
+
+
+    <div class="img">
+       <div class="b"> <button>Click</button></div>
+       <div><img src="./IMG-Dubai-UAE.jpeg"></div>
+       <h1><a href="https://www.facebook.com/">facebook</a></h1> 
+    </div> -->
+
+
+    <div>
+        
+        <input type="text" placeholder="Name" class="i">
+        <input type="text" placeholder="SurName" class="i1">
+        <button class="but">Click</button>
+
+
+        <ul>
+            
+        </ul>
     </div>
     <!-- <input type="text" value="name"> -->
     <!-- <input type="text" placeholder="name"> -->
