--- a/tnayin55/das55.html
+++ b/tnayin55/das55.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Das55-/async await</title>
+    <title>Das55-/async </title>
 </head>
 <body>
     <script src="./das55.js"></script>
